// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticatedUserDropdown snapshots with enterprise dashboard 1`] = `
<Dropdown
  className="user-dropdown"
>
  <Dropdown.Toggle
    id="user"
    src="profileImage"
    variant="primary"
  >
    <span
      className="d-none d-md-inline"
      data-hj-suppress={true}
    >
      username
    </span>
  </Dropdown.Toggle>
  <Dropdown.Menu
    className="dropdown-menu-right"
  >
    <Dropdown.Header>
      SWITCH DASHBOARD
    </Dropdown.Header>
    <Dropdown.Item
      as="a"
      className="active"
      href="/edx-dashboard"
    >
      Personal
    </Dropdown.Item>
    <Dropdown.Item
      as="a"
      href="url"
      key="label"
    >
      label
       
      Dashboard
    </Dropdown.Item>
    <Dropdown.Divider />
    <Dropdown.Item
      href="http://localhost:18000/u/username"
    >
      Profile
    </Dropdown.Item>
    <Dropdown.Item
      href="http://localhost:18000/u/username"
    >
      View Programs
    </Dropdown.Item>
    <Dropdown.Item
      href="http://localhost:18000/account/settings"
    >
      Account
    </Dropdown.Item>
    <Dropdown.Item>
      Help
    </Dropdown.Item>
    <Dropdown.Divider />
    <Dropdown.Item
      href="http://localhost:18000/logout"
    >
      Sign Out
    </Dropdown.Item>
  </Dropdown.Menu>
</Dropdown>
`;

exports[`AuthenticatedUserDropdown snapshots without enterprise dashboard and expanded 1`] = `
<Dropdown
  className="user-dropdown"
>
  <Dropdown.Toggle
    id="user"
    src="profileImage"
    variant="primary"
  >
    <span
      className="d-none d-md-inline"
      data-hj-suppress={true}
    >
      username
    </span>
  </Dropdown.Toggle>
  <Dropdown.Menu
    className="dropdown-menu-right"
  >
    <Dropdown.Header>
      SWITCH DASHBOARD
    </Dropdown.Header>
    <Dropdown.Item
      as="a"
      className="active"
      href="/edx-dashboard"
    >
      Personal
    </Dropdown.Item>
    <Dropdown.Divider />
    <Dropdown.Item
      href="http://localhost:18000/u/username"
    >
      Profile
    </Dropdown.Item>
    <Dropdown.Item
      href="http://localhost:18000/account/settings"
    >
      Account
    </Dropdown.Item>
    <Dropdown.Item>
      Help
    </Dropdown.Item>
    <Dropdown.Divider />
    <Dropdown.Item
      href="http://localhost:18000/logout"
    >
      Sign Out
    </Dropdown.Item>
  </Dropdown.Menu>
</Dropdown>
`;
